# lotus-hackathon

./: .gitignore  Lumina_Pitch_Deck.pptx  docker-compose.yml  generate_deck_images.py  pitch_deck.py  profiles.json  seed_profiles.py  test_firecrawl.py
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml  test_elevenlabs.py  test_elevenlabs_stt.py  test_image_gen.py  test_voice_gen.py
backend/alembic/: env.py
backend/app/: config.py  database.py  main.py
backend/app/models/: __init__.py  learning.py  user.py
backend/app/routes/: assessment.py  chat.py  quiz.py  slides.py  topics.py  users.py  video.py
backend/app/schemas/: __init__.py  learning.py  user.py
backend/app/services/: animated_video.py  assessment.py  chat.py  content.py  image_gen.py  llm.py  quiz_gen.py  search.py  slide_gen.py  video_gen.py  voice_gen.py
frontend/: Dockerfile.dev  index.html  nginx.conf  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: ChatPanel.tsx  KnowledgeGraph.tsx  MindMap.tsx  QuizPanel.tsx  Sidebar.tsx  SlideViewer.tsx  VideoPlayer.tsx
frontend/src/pages/: Analytics.tsx  Flashcards.tsx  KnowledgeGraphPage.tsx  LearningView.tsx  MyCourses.tsx  Profile.tsx  ProfileSetup.tsx  QuizHub.tsx  StudyPlan.tsx  TopicExplore.tsx
remotion/: Dockerfile  package-lock.json  package.json  tsconfig.json
remotion/src/: KenBurnsScene.tsx  LessonVideo.tsx  PhraseCaption.tsx  Root.tsx  TitleCardScene.tsx  server.ts  types.ts
