[project]
name = "lotus-backend"
version = "0.1.0"
description = "Personalized learning platform backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.30.0",
    "alembic>=1.13.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "firecrawl-py>=1.0.0",
    "httpx>=0.27.0",
    "python-pptx>=1.0.0",
    "python-multipart>=0.0.9",
    "langgraph>=0.4.0",
    "langchain>=0.3.0",
    "langchain-community>=0.3.0",
    "elevenlabs>=1.0.0",
    "mutagen>=1.47.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.uv]
dev-dependencies = [
    "ruff>=0.4.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
